--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>DeadSouls - Mint Page</title>
+  <title>Tekashisenshi- Mint Page</title>
 </head>
 
 <body>
